--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -53,8 +53,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PieceSet.cs" />
     <Compile Include="Piece.cs" />
-    <Compile Include="PieceFundation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
