--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="Cross.cs" />
+    <Compile Include="Vector2.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
