--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="Vector2.cs" />
+    <Compile Include="ViewModel\PieceViewModel.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,7 +109,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="View\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="piece\black_bishop.png" />
     <Content Include="piece\black_king.png" />
