--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="ListExtensions.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Form1.cs">
