--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -68,6 +68,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="Square.cs" />
