--- a/chess/chess.csproj
+++ b/chess/chess.csproj
@@ -35,26 +35,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive.Core, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Reactive.Core.3.1.1\lib\net45\System.Reactive.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Interfaces, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Reactive.Interfaces.3.1.1\lib\net45\System.Reactive.Interfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Linq, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Reactive.Linq.3.1.1\lib\net45\System.Reactive.Linq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.PlatformServices, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Reactive.PlatformServices.3.1.1\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Windows.Threading, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Reactive.Windows.Threading.3.1.1\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -72,6 +52,11 @@
     <Compile Include="Board.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="Move.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Square.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Form1.cs">
@@ -89,15 +74,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -113,18 +92,18 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="piece\black_bishop.png" />
-    <Content Include="piece\black_king.png" />
-    <Content Include="piece\black_knight.png" />
-    <Content Include="piece\black_pawn.png" />
-    <Content Include="piece\black_queen.png" />
-    <Content Include="piece\black_rook.png" />
-    <Content Include="piece\white_bishop.png" />
-    <Content Include="piece\white_king.png" />
-    <Content Include="piece\white_knight.png" />
-    <Content Include="piece\white_pawn.png" />
-    <Content Include="piece\white_queen.png" />
-    <Content Include="piece\white_rook.png" />
+    <Content Include="Resources\piece\black_bishop.png" />
+    <Content Include="Resources\piece\black_king.png" />
+    <Content Include="Resources\piece\black_knight.png" />
+    <Content Include="Resources\piece\black_pawn.png" />
+    <Content Include="Resources\piece\black_queen.png" />
+    <Content Include="Resources\piece\black_rook.png" />
+    <Content Include="Resources\piece\white_bishop.png" />
+    <Content Include="Resources\piece\white_king.png" />
+    <Content Include="Resources\piece\white_knight.png" />
+    <Content Include="Resources\piece\white_pawn.png" />
+    <Content Include="Resources\piece\white_queen.png" />
+    <Content Include="Resources\piece\white_rook.png" />
     <Content Include="Resources\Chess.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
